convert js code into typeScript
